# KAIN2

./: CMakeLists.txt  Makefile
GAME/: CMakeLists.txt  G2TYPES.H  GAMELOOP.C  LOAD3D.C  LOAD3D.H  PLAYER.C  PLAYER.H
GAME/G2/: MAING2.C
GAME/PSX/: AADSFX.C  CMakeLists.txt  MAIN.C  MAIN.H
GAME/PSX/PSX_G2/: INPUTVM.C  INPUTVM.H  MAINVM.C  RENDERRA.C  RENDERRA.H  VIEWVM.C  VIEWVM.H
