cmake_minimum_required (VERSION 3.0)

#Locate all KAIN2 GAME sources recursively
file(GLOB_RECURSE GAME_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.C  ${CMAKE_CURRENT_SOURCE_DIR}/*.H ${CMAKE_CURRENT_SOURCE_DIR}/*.CUR ${CMAKE_CURRENT_SOURCE_DIR}/*.RC)
file(GLOB_RECURSE G2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/G2/*.C  ${CMAKE_CURRENT_SOURCE_DIR}/G2/*.H ${CMAKE_CURRENT_SOURCE_DIR}/G2/*.CUR ${CMAKE_CURRENT_SOURCE_DIR}/G2/*.RC)
file(GLOB_RECURSE MONSTER_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/MONSTER/*.C  ${CMAKE_CURRENT_SOURCE_DIR}/MONSTER/*.H ${CMAKE_CURRENT_SOURCE_DIR}/MONSTER/*.CUR ${CMAKE_CURRENT_SOURCE_DIR}/MONSTER/*.RC)
file(GLOB_RECURSE PLAN_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/PLAN/*.C  ${CMAKE_CURRENT_SOURCE_DIR}/PLAN/*.H ${CMAKE_CURRENT_SOURCE_DIR}/PLAN/*.CUR ${CMAKE_CURRENT_SOURCE_DIR}/PLAN/*.RC)
file(GLOB_RECURSE RAZIEL_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/RAZIEL/*.C  ${CMAKE_CURRENT_SOURCE_DIR}/RAZIEL/*.H ${CMAKE_CURRENT_SOURCE_DIR}/RAZIEL/*.CUR ${CMAKE_CURRENT_SOURCE_DIR}/RAZIEL/*.RC)

SET(GLOBAL_GAME_SRCS "${GAME_SRCS}" CACHE INTERNAL "")
SET(GLOBAL_G2_SRCS "${G2_SRCS}" CACHE INTERNAL "")
SET(GLOBAL_MONSTER_SRCS "${MONSTER_SRCS}" CACHE INTERNAL "")
SET(GLOBAL_PLAN_SRCS "${PLAN_SRCS}" CACHE INTERNAL "")
SET(GLOBAL_RAZIEL_SRCS "${RAZIEL_SRCS}" CACHE INTERNAL "")

SET(GLOBAL_GAME_CODE_DIR "${CMAKE_CURRENT_SOURCE_DIR}" CACHE INTERNAL "")
SET(GLOBAL_G2_CODE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/G2" CACHE INTERNAL "")
SET(GLOBAL_MONSTER_CODE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/MONSTER" CACHE INTERNAL "")
SET(GLOBAL_PLAN_CODE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/PLAN" CACHE INTERNAL "")
SET(GLOBAL_RAZIEL_CODE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/RAZIEL" CACHE INTERNAL "")

#Add platform specific targets
add_subdirectory(PSX)